table_3/results/Cache2k-NW_post_nullaway_wpi.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:107: error: [NullAway] @NonNull field loaderExecutor not initialized
  private  CustomizationSupplier<? extends Executor> loaderExecutor;
                                                     ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:108: error: [NullAway] @NonNull field refreshExecutor not initialized
  private  CustomizationSupplier<? extends Executor> refreshExecutor;
                                                     ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:112: error: [NullAway] @NonNull field resiliencePolicy not initialized
  private  CustomizationSupplier<? extends ResiliencePolicy<K, V>> resiliencePolicy;
                                                                   ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:120: error: [NullAway] @NonNull field listeners not initialized
  private  CustomizationCollection<CacheEntryOperationListener<K, V>> listeners;
                                                                      ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:121: error: [NullAway] @NonNull field asyncListeners not initialized
  private  CustomizationCollection<CacheEntryOperationListener<K, V>> asyncListeners;
                                                                      ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-wpi-post/src/src/main/java/org/cache2k/config/Cache2kConfig.java:554: error: [NullAway] assigning @Nullable expression to @NonNull field
    resiliencePolicy = v;
                     ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/cache2k_nw-wpi-post/src/src/main/java/org/cache2k/config/CacheTypeCapture.java:103: error: [NullAway] method returns @Nullable, but superclass method org.cache2k.config.CacheType.getComponentType() returns @NonNull
    public  CacheType<?> getComponentType() {
                         ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
7 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 644ms
7
